--- a/Links.Rmd
+++ b/Links.Rmd
@@ -1,19 +1,52 @@
 ---
-title: "Resources"
+title: "Overview of Skills and Experience"
 output: html_document
 ---
 
-### R and R-Studio
+#### Introduction 
+After graduating from Florida Atlantic University in December 2019 with a degree in business economics, I began an applied economics masters program at the University of Wisconsin-Madison, with a concentration in resource and energy demand analysis.
 
-[R](http://www.r-project.org) is a free open-source programming language that can be used for statistical analysis, data-simulation, graphing, and lots of other stuff. Another free program is [R-studio](http://www.rstudio.com), that provides a nice graphic interface for R. Download R first, then download R-studio. Both can run on PCs, Macs or Linux. Students will be learning R in the stats labs using the lab manual []().
+As someone who has always been passionate about energy and sustainability, I'm eager to begin a career that meshes my economic background with these interests. Upon graduation in July 2021, I hope to work as a consultant or analyst in the energy industry or a related area. 
 
-### Additional R resources
 
-1. Google is great, Google your problem
-2. [Stackoverflow](https://stackoverflow.com) is great, google will often take you there because someone has already asked your question, and someone else has answered, usually many people have answered your question many ways.
-3. Danielle Navarro wrote a [free Psych Stats textbook using R](https://compcogscisydney.org/learning-statistics-with-r/), it's worth checking out (some of our textbook are based on Danielle's)
-4. I am currently writing another stats textbook (incorporating some of the above). You can read it while it's being made right here [https://crumplab.github.io/statistics/](https://crumplab.github.io/statistics/), also check out the lab manual for more specific things about doing various stats in R (also in draft right now) [https://crumplab.github.io/statisticsLab/](https://crumplab.github.io/statisticsLab/)
-5. Daniell Navarro recently made this website for introducing R, it's great, check it out (also made using this R markdown process): [http://compcogscisydney.org/psyr/](http://compcogscisydney.org/psyr/)
-6. Check out my slightly older programming book that also introduces R [https://crumplab.github.io/programmingforpsych/](https://crumplab.github.io/programmingforpsych/)
-7. This is the definitive guide for all things R Markdown (you will find this very useful as you get better at this skill): [https://bookdown.org/yihui/rmarkdown/](https://bookdown.org/yihui/rmarkdown/)
+#### Skills
+##### Software
+- R, Excel, Microsoft Office, Stata, SPSS, EViews 
+- Familiarity with SQL, Java, and IMPLAN
+
+##### Econometrics
+- Multiple linear regression, times series analysis, panel regression, clustering, instrumental variables, ext. 
+
+##### Data Analysis
+- Managing large datasets, data cleaning, data visualization, survey writing and analysis
+
+##### Business
+- analytical, organized, solution driven, efficient, inquisitive 
+
+
+#### Experience
+##### Dynamic Economic Strategy
+###### Research Assistant
+•	Developed effective visuals and detailed times series analyses for weekly newsletters and special topic publications
+•	Conducted research on financial data, preparing and editing summaries and reports to be utilized in presentations and writings 
+•	Implemented statistical packages including EViews and Stata to perform analyses on economic indicators 
+
+##### Florida Gulf Coast University
+###### Research Assistant
+•	Wrote and edited sections of ongoing regional climate surveys and quarterly reports
+•	Collected quantitative and qualitative data through contact with regional organizations and survey research 
+•	Supported university faculty on larger projects including the annual Southwest Florida Almanac and a case study of the Naples Winter Wine Festival
+•	Utilized SPSS and Impact Analysis for Planning (IMPLAN) for analysis of demographic and economic data
+
+
+##### Florida Atlantic University
+###### Independent Student Researcher
+•	Over the course of a semester, collected data and used statistical modeling to produce an econometric analysis of global renewable energy usage, exploring impacts of numerous factors including gross domestic product, natural resource rents, electricity access, and other demographic variables
+•	Showcased written report and presentation at the Broward Undergraduate Research Symposium 
+
+###### Business and Economics Polling Initiative
+•	Wrote, conducted, and analyzed a public opinion poll on perceptions of media bias, using SPSS for data analysis
+•	Presented research at several conferences, including the National Undergraduate Research Conference and the Florida Undergraduate Research Symposium 
+•	Awarded 2nd place for community engagement at the FAU Undergraduate Research Symposium
+
 
