--- a/index.Rmd
+++ b/index.Rmd
@@ -19,23 +19,19 @@ output: html_document
 
 # **Grace Sauter**
 
-This is a template example for lab journaling. Students in Matt Crump's Human Cognition and Performance Lab will use this template to learn R, and other things. Students can replace this text with more fun things. People not in my lab can use this too.
+Welcome!  My name is Grace Sauter and I'm a graduate student at the University of Wisconsin in Madison.  I'm working on my MS in Applied Economics with a concentration in resource and energy demand analysis, but in my free time, I'm working on improving my data visualization and coding skills, which is why I'm built this site.  Feel free to explore! 
 
-## How to use
+## Contact Info
 
-1. fork the repo for this website and follow instructions on read me to get set up. [https://github.com/CrumpLab/LabJournalWebsite](https://github.com/CrumpLab/LabJournalWebsite)
+LinkedIn: https://www.linkedin.com/in/gracesauter/ 
 
-2. Blog/journal what you are doing in R, by editing the Journal.Rmd. See the [Journal page](https://crumplab.github.io/LabJournalWebsite/Journal.html) for an example of what to do to get started learning R.
-
-3. See the [links page](https://crumplab.github.io/LabJournalWebsite/Links.html) for lots of helpful links on learning R.
-
-4. Change everything to make it your own.
+Email: gracesauter1@gmail.com 
 
 
 </div>
 <div class="col-sm-6">
 
-### [Crump Lab: Human Cognition and Performance](https://crumplab.github.io)
+### [********](https://crumplab.github.io)
 
 <a href = "https://crumplab.github.io">
 ![](images/logo.png)
