--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -124,5 +124,66 @@ print(a)
 ```
 
 # Replace this with problem 4
+```{r include=FALSE}
+library(dplyr)
+library(magrittr) 
+library(psych)
+library(foreign)
+library(car)
+library(data.table)
+library(knitr)
+library(ggplot2)
+library(broom) 
+library(tidyr)
+library(plotly)
+library(broom)
+library(readxl)
+library(tibble)
+library(janitor)
+library(plotly)
+library(hrbrthemes)
+library(mFilter)
+library(xts)
+library(dygraphs)
+library(scales)
+library(htmlwidgets)
 
-And keep going. Try to solve the problems with different scripts that provide the same solution. Good luck, Happy coding.
+```
+
+
+```{r include=FALSE}
+# Since my time is currently a factor, I have to convert it to a date-time format!
+
+# Then you can create the xts necessary to use dygraph
+
+data_dirxx <-"~/Documents/Dynamic Economics/EViews Graphs/Part I" 
+data11 <- read_excel(file.path(data_dirxx,
+                               "TED.xls"))
+
+names(data11) <- data11[10,]
+data11 <- data11[-c(1:10),-c(3:5)]
+
+data11$observation_date <-  excel_numeric_to_date(as.numeric(as.character(data11$observation_date)), date_system = "modern")
+data11$spread <- as.numeric(data11$spread)
+
+don <- xts(x = data11$spread, order.by = data11$observation_date)
+
+p <- dygraph(don,
+             main = "TED Spread",
+             ylab = "Spread(%)",
+             xlab = "Date") %>%
+  dyOptions(labelsUTC = TRUE, fillGraph=TRUE, fillAlpha=0.1, drawGrid = FALSE, colors="#D8AE5A") %>%
+  dyRangeSelector() %>%
+  dyCrosshair(direction = "vertical") %>%
+  dyHighlight(highlightCircleSize = 5, highlightSeriesBackgroundAlpha = 0.2, hideOnMouseOut = FALSE)  %>%
+  dyRoller(rollPeriod = 1) %>%
+  dyShading(from="1990-07-01", to="1991-03-01", axis = "x") %>% 
+  dyShading(from="2001-03-01	", to="2001-11-01", axis = "x") %>% 
+  dyShading(from="2007-12-01", to="2009-06-01", axis = "x") %>% 
+  dyShading(from="2020-02-01", to="2020-12-01	", axis = "x")
+
+```
+
+```{r}
+p
+```
