--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 
 
-Here, I'll be adding graphs and other visuals made in R on a variety of topics.
+Here, I'll be adding graphs and other visuals made in R on a variety of topics.  I'm working on improving my R skills and really enjoy trying out new packages and visualization tools, so these graphs are in no way meant to be professional quality and are simply a way for me to post my progress in this small portfolio.  Enjoy!  
 
 
 ```{r include=FALSE}
@@ -51,6 +51,15 @@ library(gifski)
 library(gapminder)
 library(png)
 library(prettydoc)
+library(cowplot)
+library(googleway)
+library(ggrepel)
+library(ggspatial)
+library(sf)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(usmap)
+
 
 #install.packages("prettydoc")
 
@@ -58,7 +67,7 @@ library(prettydoc)
 
 
 # Electricity Generation by Source
-2020 | 12 | 22
+2020 | 12 | 23
 
 This plot shows US electricity generation since 1984 broken down by generation source using data from the US Energy Information Administration.  As you can see, coal was the primary source leading into the 21st century, but just before 2010, dropped off sharply and was overtaken by natural gas.  Around the same time, petroleum also began to fall.  On the other hand, renewables have been climbing steadily since the early 90s and the rate of increase took off in the mid 2000s.  Nuclear power saw an earlier increase, rising most before 2000, and leveling off from that point forward.  Going into the 2020s, it's expected that coal power will continue to drop off and renewables will make up the lost generation.  Nuclear power has huge potential to assist in replacing fossil fuels and as an excellent clean energy source, could be vital in reaching emission reduction goals in the future. 
 
@@ -98,6 +107,42 @@ plotdd <- data2 %>%
 
 ```{r echo=FALSE}
 plotdd
+```
+
+# White Christmas
+2020 | 12 | 22
+
+It's that time of year!  In this graph, I used 2016 data from the National Oceanic and Atmospheric Administration which estimated the probability of a white Christmas based on data collected over the past 3 decades.  I used several new packages for this, including "usmap", "rnaturalearthdata", and "sf". Unfortunately, I was lacking data from the west half of the US, so the data points were not as dense as I had hoped.  I also think in the future, it would be interesting to try to find a way to map this over time, so the change in probability from year to year can be observed through animation or a year slider.  Anyway, the results here are no surprise, with northern areas much more likely to experience snow.  Of course, whether or not it snows in your region will depend highly on local weather patterns on or before the 25th, which can be found at Weather.gov. Happy holidays!     
+
+```{r include=FALSE}
+data_dir <-"~/Documents/Dynamic Economics/EViews Graphs/R" 
+
+
+data <- read_excel(file.path(data_dir,
+                               "snow.xlsx"))
+`%notin%` <- Negate(`%in%`)
+
+data <- data %>% drop_na() %>% 
+ filter(state %notin% c("AS","FM", "MP", "PR", "PW", "UM", "GU", "MH", "VI"))
+
+duplicated(data[,1:2])
+
+
+transform <- usmap_transform(data)
+glimpse(transform)
+
+unique(data$State)
+
+map <- plot_usmap() +
+  geom_point(data = transform, aes(x = lon.1, y = lat.1, col = prob), size=2.2, alpha=.8) +
+  labs(title = "Probabilty of a White Christmas by Location",
+       subtitle = "Source: National Oceanic and Atmospheric Administration, 2016",
+       col = "Probability") +
+  theme(plot.title = element_text(size = 14, face = "bold"), legend.position = "right")
+
+```
+```{r echo=FALSE}
+map
 ```
 
 # TED Spread
@@ -167,6 +212,9 @@ plotd <- don %>%
 ```{r echo=FALSE}
 plotd
 ```
+
+
+
 
 
 
