--- a/Links.Rmd
+++ b/Links.Rmd
@@ -15,6 +15,28 @@ After graduating from Florida Atlantic University in December 2019 with a degree
 
 As someone who has always been passionate about energy and sustainability, I'm eager to begin a career that meshes my economic background with these interests. Upon graduation in July 2021, I hope to work as a consultant or analyst in the energy industry or a related area. 
 
+# Education
+#### University of Wisconsin-Madison  	
+
+Master of Science in Agricultural and Applied Economics 
+
+Concentration: Resource and Energy Demand Analysis
+
+Cumulative GPA: 4.00/4.00
+
+[Program website](https://reda.aae.wisc.edu/about/)
+
+
+
+
+#### Florida Atlantic University 
+
+Bachelor of Business Administration, Honors College
+
+Major: Economics
+
+Overall GPA: 3.68/4.00
+
 
 # Skills
 #### Software
@@ -40,12 +62,18 @@ As someone who has always been passionate about energy and sustainability, I'm e
 - Conducted research on financial data, preparing and editing summaries and reports to be utilized in presentations and writings 
 - Implemented statistical packages including EViews and Stata to perform analyses on economic indicators 
 
+[DES Website](https://www.johnesilvia.com/)
+
+
+
 #### Florida Gulf Coast University
 ##### Research Assistant
 - Wrote and edited sections of ongoing regional climate surveys and quarterly reports
 - Collected quantitative and qualitative data through contact with regional organizations and survey research 
 - Supported university faculty on larger projects including the annual Southwest Florida Almanac and a case study of the Naples Winter Wine Festival
 - Utilized SPSS and Impact Analysis for Planning (IMPLAN) for analysis of demographic and economic data
+
+[Regional Economic Research Institute Website](https://www.fgcu.edu/cob/reri/)
 
 
 #### Florida Atlantic University
