--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -65,7 +65,7 @@ library(forcats)
 
 ```
 
-# Energy Burden and Insecurity
+# Energy Burdens and Insecurity
 2020 | 12 | 31
 
 In this set of graphs, energy burden, the proportion of household income spent on energy, and energy insecurity are observed.  The U.S. Energy and Information Administration Residential Energy Consumption Survey, conducted every 4-5 years, looks at energy insecurity, which is defined by the criteria of reducing or forgoing food or medicine to pay energy costs, leaving the home at an unhealthy temperature, receiving disconnect or delivery stop notice from utilities, and the inability to use heating and/or cooling equipment to limit energy costs.  About 37 million households experienced energy insecurity in 2015 and breaking it down by race, we see that a quarter of white households experienced energy insecurity, while 44% of Hispanic households, 52% of black of African American households, and 54% of American Indian or Alaskan Native households experienced energy insecurity.
