--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -65,7 +65,7 @@ library(forcats)
 
 ```
 
-# Energy Burdens
+# Energy Burden
 2020 | 12 | 31
 
 Energy burden, the proportion of household income spent on energy, is closely related to energy insecurity, discussed previously.  In the map below, energy burden of low to moderate income households is displayed at the county level using data from the National Renewable Energy Laboratory.  For reference, high energy burdens are defined as greater than 6% of income, while severe energy burdens are those greater than 10% of income.  In the US, the average energy burden is approximately 3%, but for low income households, is nearly three times larger at about 8.6%.  Energy burdens are far from equally distributed across the US with  parts of Pennsylvania, West Virginia, Virginia, Kentucky and Tennessee all showing high energy burdens.  Communities in the Gulf Coast and Southeast, especially Louisiana, Mississippi, Alabama, Georgia, and north Florida up to the Carolinas also experience high energy burdens. These areas lmay have particularly high electric and heating bills because of regional climate patterns, leading to decreased energy affordability and higher energy burdens for LMI households. 
@@ -97,7 +97,7 @@ ebb
 ```
 
 
-# Energy Insecurity
+# Energy Insecurity 
 2020 | 12 | 30
 
 The U.S. Energy and Information Administration Residential Energy Consumption Survey, conducted every 4-5 years, looks at energy insecurity, which is defined by the criteria of reducing or forgoing food or medicine to pay energy costs, leaving the home at an unhealthy temperature, receiving disconnect or delivery stop notice from utilities, and the inability to use heating and/or cooling equipment to limit energy costs.  About 37 million households experienced energy insecurity in 2015, which is over 30% of American households.  Breaking this down by race, major disparity is observed, with only quarter of white households experiencing energy insecurity, while 44% of Hispanic households, 52% of black of African American households, and 54% of American Indian or Alaskan Native households experienced energy insecurity.
