--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -99,7 +99,7 @@ ebb
 # Energy Insecurity 
 2020 | 12 | 30
 
-The U.S. Energy and Information Administration Residential Energy Consumption Survey, conducted every 4-5 years, looks at energy insecurity, which is defined by the criteria of reducing or forgoing food or medicine to pay energy costs, leaving the home at an unhealthy temperature, receiving disconnect or delivery stop notice from utilities, and the inability to use heating and/or cooling equipment to limit energy costs.  About 37 million households experienced energy insecurity in 2015, which is over 30% of American households.  Breaking this down by race, major disparity is observed, with only quarter of white households experiencing energy insecurity, while 44% of Hispanic households, 52% of black of African American households, and 54% of American Indian or Alaskan Native households experienced energy insecurity.
+The U.S. Energy and Information Administration Residential Energy Consumption Survey, conducted every 4-5 years, looks at energy insecurity, which is defined by the criteria of reducing or forgoing food or medicine to pay energy costs, leaving the home at an unhealthy temperature, receiving disconnect or delivery stop notice from utilities, and the inability to use heating and/or cooling equipment to limit energy costs.  About 37 million households experienced energy insecurity in 2015, which is over 30% of American households.  Breaking this down by race, major disparity is observed, with only quarter of white households experiencing energy insecurity, while 44% of Hispanic households, 52% of black or African American households, and 54% of American Indian or Alaskan Native households experienced energy insecurity.
 
 ```{r include=FALSE}
 datax <- read_excel(file.path(data_dirl,
