--- a/Links.Rmd
+++ b/Links.Rmd
@@ -9,10 +9,10 @@ output:
     highlight: tango
 ---
 
+# Introduction
+After graduating from Florida Atlantic University in December 2019 with a degree in business economics, I began an applied economics masters program in June 2020 at the University of Wisconsin-Madison, with a concentration in resource and energy demand analysis.
 
-After graduating from Florida Atlantic University in December 2019 with a degree in business economics, I began an applied economics masters program at the University of Wisconsin-Madison, with a concentration in resource and energy demand analysis.
-
-As someone who has always been passionate about energy and sustainability, I'm eager to begin a career that meshes my economic background with these interests. Upon graduation in July 2021, I hope to work as a consultant or analyst in the energy industry or a related area. 
+As someone who has always been passionate about energy and sustainability, I'm eager to begin a career that meshes my economic background with these interests. Upon graduating in July 2021, I hope to work as a consultant or analyst in the energy industry or a related area. 
 
 # Education
 #### University of Wisconsin-Madison  	
