--- a/Links.Rmd
+++ b/Links.Rmd
@@ -16,6 +16,8 @@ As someone who has always been passionate about energy and sustainability, I'm e
 
 # Education
 #### University of Wisconsin-Madison  	
+##### June 2020 - July 2021
+
 
 Master of Science in Agricultural and Applied Economics 
 
@@ -27,14 +29,16 @@ Cumulative GPA: 4.00/4.00
 
 
 
-
 #### Florida Atlantic University 
+##### August 2016 - December 2019
 
 Bachelor of Business Administration, Honors College
 
 Major: Economics
 
 Overall GPA: 3.68/4.00
+
+
 
 
 # Skills
@@ -55,8 +59,19 @@ Overall GPA: 3.68/4.00
 
 
 # Experience
+
+#### Guidehouse 
+##### Intern
+##### February 2021 - July 2021
+
+- Advanced Solutions, ES&I Analytics - Campus 2021
+- Participated in internship in conjunction with REDA graduate program in spring 2021
+
+
 #### Dynamic Economic Strategy
 ##### Research Assistant
+##### October 2019 - Present
+
 - Developed effective visuals and detailed times series analyses for weekly newsletters and special topic publications
 - Conducted research on financial data, preparing and editing summaries and reports to be utilized in presentations and writings 
 - Implemented statistical packages including EViews and Stata to perform analyses on economic indicators 
@@ -67,6 +82,8 @@ Overall GPA: 3.68/4.00
 
 #### Florida Gulf Coast University
 ##### Research Assistant
+##### June 2019 - August 2020
+
 - Wrote and edited sections of ongoing regional climate surveys and quarterly reports
 - Collected quantitative and qualitative data through contact with regional organizations and survey research 
 - Supported university faculty on larger projects including the annual Southwest Florida Almanac and a case study of the Naples Winter Wine Festival
@@ -77,10 +94,14 @@ Overall GPA: 3.68/4.00
 
 #### Florida Atlantic University
 ##### Independent Student Researcher
+##### August 2019 - December 2019
+
 - Over the course of a semester, collected data and used statistical modeling to produce an econometric analysis of global renewable energy usage, exploring impacts of numerous factors including gross domestic product, natural resource rents, electricity access, and other demographic variables
 - Showcased written report and presentation at the Broward Undergraduate Research Symposium 
 
 ##### Business and Economics Polling Initiative
+##### August 2018 - May 2019
+
 - Wrote, conducted, and analyzed a public opinion poll on perceptions of media bias, using SPSS for data analysis
 - Presented research at several conferences, including the National Undergraduate Research Conference and the Florida Undergraduate Research Symposium 
 - Awarded 2nd place for community engagement at the FAU Undergraduate Research Symposium
