--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -190,6 +190,9 @@ counties <- na.omit(counties)
                       labels = c("< 3.1%", "3.1 to <6%", "6 to <10%", "10 to <20%", "20 to <40%", "40% +", "NA"))+
   labs(title = "Energy Burden by County for LMI households",subtitle="Average energy expenditures as a percent of income", caption = "Source: National Renewable Energy Laboratory")+
     theme(legend.position = "right", panel.background = element_rect(colour = "black"),plot.title = element_text(size = 12.2, face = "bold"))
+ 
+#ggsave("ebb.png")
+
 ```
 
 
